Reduce content padding and fix footer text positioning
Main content:
- Reduce left padding from 0.7em to 0.5em

Footer text elements:
- Add 1.5em left/right margins to .page__footer-follow
- Add 1.5em left/right margins to .page__footer-copyright
- Prevents "Sitemap" text cutoff (was showing "itemap")
- Properly positions all footer content away from edges

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -8,7 +8,7 @@
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0;
-    padding-left: 0.7em;
+    padding-left: 0.5em;
     padding-right: 1em;
     animation: none;
 
